Fix Blogroll layout on small devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -195,7 +195,7 @@ main p.content-highlight {
 }
 
 .empty {
-  height: 22px;
+  height: 20px;
 }
 
 div#blogroll ul {
